// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeMirrorCore renders controlled 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <WithStyles(Toolbar)
    disableGutters={true}
  >
    <WithStyles(Button)
      label="Format"
      onClick={[Function]}
    />
  </WithStyles(Toolbar)>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value="original value"
  />
</div>
`;

exports[`CodeMirrorCore renders with defaults 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <WithStyles(Toolbar)
    disableGutters={true}
  >
    <WithStyles(Button)
      label="Format"
      onClick={[Function]}
    />
  </WithStyles(Toolbar)>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value=""
  />
</div>
`;
